[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Actors/PoisonousCloudModule.gd" type="Script" id=1]

[node name="PoisonousCloudModule" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TimerDestroy" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TimerQuitted" type="Timer" parent="."]
wait_time = 0.1

[node name="TimerDealDamage" type="Timer" parent="."]
wait_time = 0.6
autostart = true
[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
[connection signal="timeout" from="TimerDestroy" to="." method="_on_TimerDestroy_timeout"]
[connection signal="timeout" from="TimerQuitted" to="." method="_on_TimerQuitted_timeout"]
[connection signal="timeout" from="TimerDealDamage" to="." method="_on_TimerDealDamage_timeout"]
